MAJ Style sources files

--- a/ili-style/coming_soon.html
+++ b/ili-style/coming_soon.html
@@ -34,7 +34,7 @@
 <body id="coming-body">
   <div class="lock-header">
       <!-- BEGIN LOGO -->
-      <a href="../index.html" id="logo" class="center">
+      <a href="index.html" id="logo" class="center">
           <img src="img/logo.png" alt="logo" class="center" />
       </a>
       <!-- END LOGO -->
