--- a/ili-style/lock.html
+++ b/ili-style/lock.html
@@ -27,7 +27,7 @@ Website: http://thevectorlab.net/
 <body id="lock-body">
   <div class="lock-header">
       <!-- BEGIN LOGO -->
-      <a href="../index.html" id="logo" class="center">
+      <a href="index.html" id="logo" class="center">
           <img src="img/logo.png" alt="logo" class="center" />
       </a>
       <!-- END LOGO -->
@@ -48,13 +48,13 @@ Website: http://thevectorlab.net/
           <h3>Dulal Khan</h3>
           <span>dkmosa@gmail.com</span>
           <div class="lock-form-row">
-              <form action="../index.html" class="form-search">
+              <form action="index.html" class="form-search">
                   <div class="input-append">
                       <input type="password" placeholder="Password" class="m-wrap">
                       <button class="btn tarquoise" type="submit"><i class=" icon-arrow-right"></i></button>
                   </div>
                   <div class="relogin">
-                      <a href="../login.html">Not Dulal Khan ?</a>
+                      <a href="login.html">Not Dulal Khan ?</a>
                   </div>
               </form>
           </div>
