--- a/ili-style/index_2.html
+++ b/ili-style/index_2.html
@@ -37,7 +37,7 @@ Website: http://thevectorlab.net/
         <div class="navbar-inner">
             <div class="container-fluid">
                 <!-- BEGIN LOGO -->
-                <a class="brand" href="../index.html">
+                <a class="brand" href="index.html">
                     <img src="img/logo.png" alt="Admin Lab" />
                 </a>
                 <!-- END LOGO -->
@@ -206,7 +206,7 @@ Website: http://thevectorlab.net/
                                 <li><a href="#"><i class="icon-tasks"></i> My Tasks</a></li>
                                 <li><a href="#"><i class="icon-calendar"></i> Calendar</a></li>
                                 <li class="divider"></li>
-                                <li><a href="../login.html"><i class="icon-key"></i> Log Out</a></li>
+                                <li><a href="login.html"><i class="icon-key"></i> Log Out</a></li>
                             </ul>
                         </li>
                         <!-- END USER LOGIN DROPDOWN -->
@@ -241,7 +241,7 @@ Website: http://thevectorlab.net/
                         <span class="arrow"></span>
                     </a>
                     <ul class="sub">
-                        <li><a class="" href="../index.html">Dashboard 1</a></li>
+                        <li><a class="" href="index.html">Dashboard 1</a></li>
                         <li class="active"><a class="" href="index_2.html">Dashboard 2</a></li>
 
                     </ul>
@@ -329,7 +329,7 @@ Website: http://thevectorlab.net/
                     </a>
                     <ul class="sub">
                         <li><a class="" href="lock.html">Lock Screen</a></li>
-                        <li><a class="" href="../ili-users/profile.html">Profile</a></li>
+                        <li><a class="" href="profile.html">Profile</a></li>
                         <li><a class="" href="invoice.html">Invoice</a></li>
                         <li><a class="" href="pricing_tables.html">Pricing Tables</a></li>
                         <li><a class="" href="faq.html">FAQ</a></li>
@@ -337,7 +337,7 @@ Website: http://thevectorlab.net/
                         <li><a class="" href="500.html">500 Error</a></li>
                     </ul>
                 </li>
-                <li><a class="" href="../login.html"><span class="icon-box"><i class="icon-user"></i></span> Login Page</a></li>
+                <li><a class="" href="login.html"><span class="icon-box"><i class="icon-user"></i></span> Login Page</a></li>
             </ul>
 			<!-- END SIDEBAR MENU -->
 		</div>
