--- a/ili-style/invoice.html
+++ b/ili-style/invoice.html
@@ -29,7 +29,7 @@
        <div class="navbar-inner">
            <div class="container-fluid">
                <!-- BEGIN LOGO -->
-               <a class="brand" href="../index.html">
+               <a class="brand" href="index.html">
                    <img src="img/logo.png" alt="Admin Lab" />
                </a>
                <!-- END LOGO -->
@@ -198,7 +198,7 @@
                                <li><a href="#"><i class="icon-tasks"></i> My Tasks</a></li>
                                <li><a href="#"><i class="icon-calendar"></i> Calendar</a></li>
                                <li class="divider"></li>
-                               <li><a href="../login.html"><i class="icon-key"></i> Log Out</a></li>
+                               <li><a href="login.html"><i class="icon-key"></i> Log Out</a></li>
                            </ul>
                        </li>
                        <!-- END USER LOGIN DROPDOWN -->
@@ -232,7 +232,7 @@
                       <span class="arrow"></span>
                   </a>
                   <ul class="sub">
-                      <li><a class="" href="../index.html">Dashboard 1</a></li>
+                      <li><a class="" href="index.html">Dashboard 1</a></li>
                       <li><a class="" href="index_2.html">Dashboard 2</a></li>
 
                   </ul>
@@ -320,7 +320,7 @@
                   </a>
                   <ul class="sub">
                       <li><a class="" href="lock.html">Lock Screen</a></li>
-                      <li><a class="" href="../ili-users/profile.html">Profile</a></li>
+                      <li><a class="" href="profile.html">Profile</a></li>
                       <li class="active"><a class="" href="invoice.html">Invoice</a></li>
                       <li><a class="" href="pricing_tables.html">Pricing Tables</a></li>
                       <li><a class="" href="faq.html">FAQ</a></li>
@@ -328,7 +328,7 @@
                       <li><a class="" href="500.html">500 Error</a></li>
                   </ul>
               </li>
-              <li><a class="" href="../login.html"><span class="icon-box"><i class="icon-user"></i></span> Login Page</a></li>
+              <li><a class="" href="login.html"><span class="icon-box"><i class="icon-user"></i></span> Login Page</a></li>
           </ul>
          <!-- END SIDEBAR MENU -->
       </div>
