--- a/ili-style/ui_elements_general.html
+++ b/ili-style/ui_elements_general.html
@@ -41,7 +41,7 @@
         <div class="navbar-inner">
             <div class="container-fluid">
                 <!-- BEGIN LOGO -->
-                <a class="brand" href="../index.html">
+                <a class="brand" href="index.html">
                     <img src="img/logo.png" alt="Admin Lab" />
                 </a>
                 <!-- END LOGO -->
@@ -210,7 +210,7 @@
                                 <li><a href="#"><i class="icon-tasks"></i> My Tasks</a></li>
                                 <li><a href="#"><i class="icon-calendar"></i> Calendar</a></li>
                                 <li class="divider"></li>
-                                <li><a href="../login.html"><i class="icon-key"></i> Log Out</a></li>
+                                <li><a href="login.html"><i class="icon-key"></i> Log Out</a></li>
                             </ul>
                         </li>
                         <!-- END USER LOGIN DROPDOWN -->
@@ -244,7 +244,7 @@
                         <span class="arrow"></span>
                     </a>
                     <ul class="sub">
-                        <li><a class="" href="../index.html">Dashboard 1</a></li>
+                        <li><a class="" href="index.html">Dashboard 1</a></li>
                         <li><a class="" href="index_2.html">Dashboard 2</a></li>
 
                     </ul>
@@ -332,7 +332,7 @@
                     </a>
                     <ul class="sub">
                         <li><a class="" href="lock.html">Lock Screen</a></li>
-                        <li><a class="" href="../ili-users/profile.html">Profile</a></li>
+                        <li><a class="" href="profile.html">Profile</a></li>
                         <li><a class="" href="invoice.html">Invoice</a></li>
                         <li><a class="" href="pricing_tables.html">Pricing Tables</a></li>
                         <li><a class="" href="faq.html">FAQ</a></li>
@@ -340,7 +340,7 @@
                         <li><a class="" href="500.html">500 Error</a></li>
                     </ul>
                 </li>
-                <li><a class="" href="../login.html"><span class="icon-box"><i class="icon-user"></i></span> Login Page</a></li>
+                <li><a class="" href="login.html"><span class="icon-box"><i class="icon-user"></i></span> Login Page</a></li>
             </ul>
 			<!-- END SIDEBAR MENU -->
 		</div>
