--- a/ili-style/login.html
+++ b/ili-style/login.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <!--
-Template Name: Admin Lab Dashboard build with Bootstrap v2.3.1
-Template Version: 1.2
-Author: Mosaddek Hossain
-Website: http://thevectorlab.net/
+iLi-ERP
+Développer par : SAKLY AYOUB
+Société	: iLi-Studios SARL
+Site : http://www.ili-studios.com/
 -->
-
 <!--[if IE 8]> <html lang="en" class="ie8"> <![endif]-->
 <!--[if IE 9]> <html lang="en" class="ie9"> <![endif]-->
 <!--[if !IE]><!--> <html lang="en"> <!--<![endif]-->
