add notification module

--- a/ili-style/form_component.html
+++ b/ili-style/form_component.html
@@ -926,7 +926,7 @@
                                     <label class="control-label">Button</label>
                                     <div class="controls">
                                         <div class="input-append">
-                                            <input type="text" id="clockface_2" value="14:30" class=" small" readonly="" />
+                                            <input type="text" id="clockface_2" value="14:30" class=" small" readonly />
                                             <button class="btn" type="button" id="clockface_2_toggle-btn">
                                                 <i class="icon-time"></i>
                                             </button>
